Fixed pages cutting off

--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,7 @@ body {
     margin: 0;
     padding: 0;
     @media (min-width: 38em) {
-        overflow: hidden;
+        overflow: scroll;
     }
 }
 
@@ -370,7 +370,7 @@ tbody tr:nth-child(odd) th {
         .social {
             position: absolute;
             bottom: 0;
-            margin-left: 2vw;
+            margin-left: 5vw;
             color: #d1d1d1;
             a {
                 padding: 0;
